# findora-agent

./: Cargo.toml
agent/: Cargo.toml
agent/src/: db.rs  error.rs  lib.rs  native.rs  profiler.rs  utils.rs  utxo.rs
config/keys/: root.eth
feth/: Cargo.toml
feth/src/: main.rs
feth/src/commands/: common.rs  fund.rs  long_run.rs  mod.rs  native.rs  prism.rs
feth/src/commands/tests/: basic.rs  long_run.rs  mod.rs
findora/: Cargo.toml
findora/src/: db.rs  error.rs  lib.rs  main.rs  utils.rs  utxo.rs
findora/src/commands/: mod.rs  progressive_test.rs
profiler/: Cargo.toml
profiler/src/: lib.rs
scripts/: batch.sh  common.sh  node_env.sh  node_init.sh  node_init_mainnet.sh  node_init_testnet.sh  prism_init.sh  update_cluster.sh  update_node.sh  update_node_env.sh  utxo_txn_test.sh
scripts/config/: eth.address  eth.secret
scripts/node/: node_init_testnet.sh  update_cluster.sh
