[package]
name = "agent"
version = "0.1.0"
description = "Findora Network agent sdk"
authors = ["FindoraNetwork"]
edition = "2021"

[dependencies]
web3 = { git = "https://github.com/simonjiao/rust-web3.git", branch = "findora" }
finutils = { git = "https://github.com/simonjiao/findora-sdk.git", branch = "sdk-v2", default-features = false }
#finutils = { path = "../../findora-sdk/finutils", default-features = false }
tendermint = { git = "https://github.com/FindoraNetwork/tendermint-rs", tag = "v0.19.0a-fk" }
tendermint-rpc = { git = "https://github.com/FindoraNetwork/tendermint-rs", features = ["http-client", "websocket-client"], tag = "v0.19.0a-fk" }
#tendermint-rpc = { version = "0.23.0", features = ["http-client", "websocket-client"] }
#tendermint = { version = "0.23.0"  }
tokio = { version = "1.14" }
secp256k1 = { version = "0.21", features = ["recovery"]}
bip0039 = "0.10.1"
bip32 = "0.2.1"
libsecp256k1 = { version = "0.7", features = ["static-context", "hmac"] }
hex = "0.4.3"
eth_checksum = "0.1.2"
sha3 = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rayon = "1.5"
num_cpus = "1.13.1"
url = {version = "2.2.2", features = ["serde"]}
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
tracing = "0.1.37"
redis = { version = "0.21.5", features =[ "default", "tokio-comp" ] }
derive_more = "0.99.17"
anyhow = "1.0"
csv = "1.1.6"
lazy_static = "1.4.0"
