[package]
name = "feth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent = { path = "../agent" }
web3 = { git = "https://github.com/simonjiao/rust-web3.git", branch = "findora" }
tendermint-rpc = { version = "0.23.0", features = ["http-client", "websocket-client"] }
chrono = "0.4.19"
clap = {version = "3.1", features = [ "derive" ]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rayon = "1.6.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
secp256k1 = { version = "0.21", features = ["recovery"]}
tokio = { version = "1", features = [ "rt", "fs", "io-util" ]}
